--- a/k8s/minio-service.yaml
+++ b/k8s/minio-service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: minio-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 9000
       targetPort: 9000
       protocol: TCP
   selector:
-    app: minio-service
+    app: minio
