--- a/k8s/minio-deploy.yaml
+++ b/k8s/minio-deploy.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: minio-deploy
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: minio
+      app: minio 
   strategy:
     type: Recreate
   replicas: 1
@@ -22,26 +22,29 @@ spec:
           claimName: minio-pvc
       containers:
       - name: minio-deploy
-        image: minio/minio:latest
+        image: minio/minio:RELEASE.2020-05-01T22-19-14Z
         args:
         - server
         - /storage
-        resources:
-          limits:
-            memory: 512Mi
-            cpu: "1000m"
-          requests:
-            memory: 512Mi
-            cpu: "512m"
         env:
-        - name: MINIO_ROOT_USER
+        - name: MINIO_ACCESS_KEY
           value: "minio"
-        - name: MINIO_ROOT_PASSWORD
+        - name: MINIO_SECRET_KEY
           value: "minio123"
         ports:
         - containerPort: 9000
-          hostPort: 9000
-          name: minio
         volumeMounts:
-        - name: storage
+        - name: storage 
           mountPath: "/storage"
+        readinessProbe:
+          httpGet:
+            path: /minio/health/ready
+            port: 9000
+          initialDelaySeconds: 120
+          periodSeconds: 20
+        livenessProbe:
+          httpGet:
+            path: /minio/health/live
+            port: 9000
+          initialDelaySeconds: 120
+          periodSeconds: 20
