fix: fixing queue-wrapper ports and Dockerfile

--- a/redis/worker/Dockerfile
+++ b/redis/worker/Dockerfile
@@ -7,4 +7,5 @@ RUN pip install -r /app/requirements.txt
 COPY . /app
 WORKDIR /app
 
+RUN chmod +x ./thumbnail_worker.py
 CMD ["./thumbnail_worker.py"]
