--- a/redis/docker-compose.yaml
+++ b/redis/docker-compose.yaml
@@ -4,19 +4,25 @@ services:
     image: redis:7-alpine
     ports:
       - '6379:6379'
+    healthcheck:
+      test: ["CMD", "redis-cli","ping"]
+      timeout: 20s
+      retries: 10
   worker:
     build:
       context: worker
     depends_on:
-      - "redis"
+      redis:
+        condition: service_healthy
     environment:
       - REDIS_QUEUE=redis
   queue-wrapper:
     build:
       context: queue-wrapper
     depends_on:
-      - "redis"
+      redis:
+        condition: service_healthy
     environment:
       - REDIS_QUEUE=redis
     ports:
-      - '7777:7777'
+      - '7777:5000'
