--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,17 +8,17 @@ services:
       test: ["CMD", "redis-cli","ping"]
       timeout: 20s
       retries: 10
-  worker:
+  work-queue:
     build:
-      context: worker
+      context: .
     depends_on:
       redis:
         condition: service_healthy
     environment:
       - REDIS_QUEUE=redis
-  queue-wrapper:
+  web-controller:
     build:
-      context: queue-wrapper
+      context: redis/web_controller
     depends_on:
       redis:
         condition: service_healthy
