fix: minor fixing in Dockerfiles and job_posting

--- a/redis/work_queue/Dockerfile
+++ b/redis/work_queue/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install -r /app/requirements.txt
 COPY . /app
 WORKDIR /app
 
-RUN chmod +x ./thumbnail_worker.py
-CMD ["python", "./thumbnail_worker.py"]
+RUN chmod +x work_queue.py
+CMD ["python", "work_queue.py"]
