--- a/redis/web_controller/Dockerfile
+++ b/redis/web_controller/Dockerfile
@@ -7,5 +7,7 @@ RUN pip install -r /app/requirements.txt
 COPY . /app
 WORKDIR /app
 
+EXPOSE 5000
+
 RUN chmod +x job_posting.py
 CMD ["python", "job_posting.py"]
