--- a/work_queue/Dockerfile
+++ b/work_queue/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-alpine
 
-COPY ./requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
 
 RUN pip install -r /app/requirements.txt
 
