Fix redis yaml file

--- a/k8s/redis-service.yaml
+++ b/k8s/redis-service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: redis-service
+  labels:
+    tier: backend
+    layer: redis
 spec:
-  clusterIP: None
   ports:
   - port: 6379
-    targetPort: 6379
-    name: redis
+    protocol: TCP
   selector:
-    app: redis
+    tier: backend
+    layer: redis
+  type: ClusterIP
