--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
