--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -15,3 +15,10 @@ spec:
             name: web-controller
             port:
               number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80
